--- a/client/public/user.html
+++ b/client/public/user.html
@@ -2,184 +2,233 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="./img/apple-icon.png" />
-    <link rel="icon" type="image/png" href="./img/favicon.png" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Material Dashboard by Creative Tim</title>
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <meta name="viewport" content="width=device-width" />
-    <!-- Bootstrap core CSS     -->
-    <link href="./css/bootstrap.min.css" rel="stylesheet" />
-    <!--  Material Dashboard CSS    -->
-    <link href="./css/material-dashboard.css?v=1.2.0" rel="stylesheet" />
-    <!--  CSS for Demo Purpose, don't include it in your project     -->
-    <link href="./css/demo.css" rel="stylesheet" />
-    <!--     Fonts and icons     -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
+  <meta charset="utf-8" />
+  <link rel="apple-touch-icon" sizes="76x76" href="./img/apple-icon.png" />
+  <link rel="icon" type="image/png" href="./img/favicon.png" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <title>Material Dashboard by Creative Tim</title>
+  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+  <meta name="viewport" content="width=device-width" />
+  <!-- Bootstrap core CSS     -->
+  <link href="./css/bootstrap.min.css" rel="stylesheet" />
+  <!--  Material Dashboard CSS    -->
+  <link href="./css/material-dashboard.css?v=1.2.0" rel="stylesheet" />
+  <!--  CSS for Demo Purpose, don't include it in your project     -->
+  <link href="./css/demo.css" rel="stylesheet" />
+  <!--     Fonts and icons     -->
+  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="sidebar" data-color="purple" data-image="../assets/img/sidebar-1.jpg">
-            <!--
+  <div class="wrapper">
+    <div class="sidebar" data-color="purple" data-image="../assets/img/sidebar-1.jpg">
+      <!--
         Tip 1: You can change the color of the sidebar using: data-color="purple | blue | green | orange | red"
 
         Tip 2: you can also add an image using data-image tag
     -->
-            <div class="logo">
-                <a href="" class="simple-text">
+      <div class="logo">
+        <a href="" class="simple-text">
                     Lol
                 </a>
-            </div>
-            <div class="sidebar-wrapper">
-                <ul class="nav">
-                    <li>
-                        <a href="./index.html">
+      </div>
+      <div class="sidebar-wrapper">
+        <ul class="nav">
+          <li>
+            <a href="./index.html">
                             <i class="material-icons">dashboard</i>
                             <p>Dashboard</p>
                         </a>
-                    </li>
-                    <li class="active">
-                        <a href="./user.html">
+          </li>
+          <li class="active">
+            <a href="./user.html">
                             <i class="material-icons">person</i>
                             <p>User Profile</p>
                         </a>
-                    </li>
-                    <li>
-                        <a href="./buy.html">
+          </li>
+          <li>
+            <a href="./buy.html">
                             <i class="material-icons">shopping_cart</i>
                             <p>Buy / Sell</p>
                         </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="main-panel">
-            <nav class="navbar navbar-transparent navbar-absolute">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse">
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="main-panel">
+      <nav class="navbar navbar-transparent navbar-absolute">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse">
                             <span class="sr-only">Toggle navigation</span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#"> Profile </a>
-                    </div>
-                    <div class="collapse navbar-collapse">
-                        <ul class="nav navbar-nav navbar-right">
-                            <li>
-                                <a href="./login.html" class="dropdown-toggle loggout" data-toggle="dropdown">
+            <a class="navbar-brand" href="#"> Profile </a>
+          </div>
+          <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+              <li>
+                <a href="./login.html" class="dropdown-toggle loggout" data-toggle="dropdown">
                                     <i class="material-icons">person</i>
                                     <p class="hidden-lg hidden-md">Profile</p>
                                 </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
-            <div class="content">
-              <div class="container-fluid">
-                <div class="card">
-                    <div class="card-header" data-background-color="blue">
-                        <h4 class="title">Current Stocks</h4>
-                        <p class="category">Stocks as of <span id="time2">11/5/2017</span></p>
-                    </div>
-                    <div class="card-content table-responsive">
-                        <table class="table table-hover">
-                            <thead class="text-warning">
-                                <th>Ticker</th>
-                                <th>Current Price</th>
-                                <th>Purchase Price</th>
-                                <th>% Gain/Loss</th>
-                                <th>Shares</th>
-                                <th>Net Worth</th>
-                                <th>Net Gain/Loss</th>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>GOOGL</td>
-                                    <td>$1,050</td>
-                                    <td>$925</td>
-                                    <td>11.8%</td>
-                                    <td>35</td>
-                                    <td>$36,738</td>
-                                    <td>$4,351</td>
-                                </tr>
-                                <tr>
-                                    <td>AMZN</td>
-                                    <td>$1,050</td>
-                                    <td>$925</td>
-                                    <td>11.8%</td>
-                                    <td>35</td>
-                                    <td>$36,738</td>
-                                    <td>$4,351</td>
-                                </tr>
-                                <tr>
-                                    <td>AAPL</td>
-                                    <td>$1,050</td>
-                                    <td>$925</td>
-                                    <td>11.8%</td>
-                                    <td>35</td>
-                                    <td>$36,738</td>
-                                    <td>$4,351</td>
-                                </tr>
-                                <tr>
-                                    <td>FB</td>
-                                    <td>$1,050</td>
-                                    <td>$925</td>
-                                    <td>11.8%</td>
-                                    <td>35</td>
-                                    <td>$36,738</td>
-                                    <td>$4,351</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
+      <div class="content">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="card card-stats">
+                <div class="card-header" data-background-color="green">
+                  <i class="material-icons">store</i>
+                </div>
+                <div class="card-content">
+                  <p class="category">Starting Balance</p>
+                  <h3 class="title">$10,000</h3>
+                </div>
+                <div class="card-footer">
+                  <div class="stats">
+                  </div>
                 </div>
               </div>
             </div>
-
-            <footer class="footer">
-                <div class="container-fluid">
-                    <nav class="pull-left">
-                        <ul>
-                            <li>
-                                <a href="#">
-                                    Home
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Company
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Portfolio
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Blog
-                                </a>
-                            </li>
-                        </ul>
-                    </nav>
-                    <p class="copyright pull-right">
-                        &copy;
-                        <script>
-                            document.write(new Date().getFullYear())
-                        </script>
-                        <a href="http://www.creative-tim.com">Creative Tim</a>, made with love for a better web
-                    </p>
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="card card-stats">
+                <div class="card-header" data-background-color="green">
+                  <i class="material-icons">store</i>
                 </div>
-            </footer>
+                <div class="card-content">
+                  <p class="category">Net Profit</p>
+                  <h3 class="title">$34,245</h3>
+                </div>
+                <div class="card-footer">
+                  <div class="stats">
+                    <i class="material-icons">date_range</i> Since the beginning of time
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="card card-stats">
+                <div class="card-header" data-background-color="green">
+                  <i class="material-icons">store</i>
+                </div>
+                <div class="card-content">
+                  <p class="category">Total Stocks Owned</p>
+                  <h3 class="title">140</h3>
+                </div>
+                <div class="card-footer">
+                  <div class="stats">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-header" data-background-color="blue">
+              <h4 class="title">Current Stocks</h4>
+              <p class="category">Stocks as of <span id="time2">11/5/2017</span></p>
+            </div>
+            <div class="card-content table-responsive">
+              <table class="table table-hover">
+                <thead class="text-warning">
+                  <th>Ticker</th>
+                  <th>Current Price</th>
+                  <th>Purchase Price</th>
+                  <th>% Gain/Loss</th>
+                  <th>Shares</th>
+                  <th>Net Worth</th>
+                  <th>Net Gain/Loss</th>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>GOOGL</td>
+                    <td>$1,050</td>
+                    <td>$925</td>
+                    <td>11.8%</td>
+                    <td>35</td>
+                    <td>$36,738</td>
+                    <td>$4,351</td>
+                  </tr>
+                  <tr>
+                    <td>AMZN</td>
+                    <td>$1,050</td>
+                    <td>$925</td>
+                    <td>11.8%</td>
+                    <td>35</td>
+                    <td>$36,738</td>
+                    <td>$4,351</td>
+                  </tr>
+                  <tr>
+                    <td>AAPL</td>
+                    <td>$1,050</td>
+                    <td>$925</td>
+                    <td>11.8%</td>
+                    <td>35</td>
+                    <td>$36,738</td>
+                    <td>$4,351</td>
+                  </tr>
+                  <tr>
+                    <td>FB</td>
+                    <td>$1,050</td>
+                    <td>$925</td>
+                    <td>11.8%</td>
+                    <td>35</td>
+                    <td>$36,738</td>
+                    <td>$4,351</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
+      </div>
+
+      <footer class="footer">
+        <div class="container-fluid">
+          <nav class="pull-left">
+            <ul>
+              <li>
+                <a href="#">
+                              Home
+                          </a>
+              </li>
+              <li>
+                <a href="#">
+                              Company
+                          </a>
+              </li>
+              <li>
+                <a href="#">
+                              Portfolio
+                          </a>
+              </li>
+              <li>
+                <a href="#">
+                              Blog
+                          </a>
+              </li>
+            </ul>
+          </nav>
+          <p class="copyright pull-right">
+            &copy;
+            <script>
+              document.write(new Date().getFullYear())
+            </script>
+            <a href="http://www.creative-tim.com">Creative Tim</a>, made with love for a better web
+          </p>
+        </div>
+      </footer>
     </div>
+  </div>
 </body>
 <!--   Core JS Files   -->
 <script src="./js/jquery-3.2.1.min.js" type="text/javascript"></script>
