--- a/client/public/user.html
+++ b/client/public/user.html
@@ -154,14 +154,15 @@
             </div>
           </div>
 
-          <div class="card card-stats">
-            <div class="card-header" data-background-color="orange">
-              <i class="fa fa-coffee"></i>
+          <div class="row">
+            <div class="card card-stats" id="whatif">
+              <div class="card-header" data-background-color="orange">
+                <i class="fa fa-coffee"></i>
+              </div>
+              <div class="card-content">
+                <h3 class="title">With the money you would have made, you could buy 11,415 coffees!</h3>
+              </div>
             </div>
-            <div class="card-content">
-              <h3 class="title">With the money you would have made, you could buy 11,415 coffees!</h3>
-            </div>
-
           </div>
 
         </div>
